--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ Temporary commit content 95
 Temporary commit content 98
 Temporary commit content 113
 Temporary commit content 122
+Temporary commit content 143
