--- a/config.json
+++ b/config.json
@@ -27,3 +27,4 @@ Temporary commit content 19
 Temporary commit content 37
 Temporary commit content 57
 Temporary commit content 73
+Temporary commit content 74
