--- a/config.json
+++ b/config.json
@@ -17,3 +17,4 @@ Temporary commit content 156
 Temporary commit content 176
 Temporary commit content 177
 Temporary commit content 205
+Temporary commit content 254
