Added validation for user input

--- a/config.json
+++ b/config.json
@@ -50,3 +50,4 @@ Temporary commit content 271
 Temporary commit content 289
 Temporary commit content 293
 Temporary commit content 294
+Temporary commit content 296
