Added initial project plan

--- a/config.json
+++ b/config.json
@@ -30,3 +30,4 @@ Temporary commit content 73
 Temporary commit content 74
 Temporary commit content 87
 Temporary commit content 90
+Temporary commit content 99
