--- a/config.json
+++ b/config.json
@@ -26,3 +26,4 @@ Temporary commit content 12
 Temporary commit content 19
 Temporary commit content 37
 Temporary commit content 57
+Temporary commit content 73
